# agentdeck

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: aliases.rs  discover.rs  env.rs  index.html  main.rs  profile.rs  pty.rs  running.rs  sessions.rs  skills.rs  ws_handler.rs
