[package]
name = "agentdeck"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "Local web launcher for multi-agent profiles (claude / codex / qwen / hermes) — browser UI, xterm.js terminals, per-profile cwd / env"
repository = "https://github.com/rollysys/agentdeck"
readme = "README.md"

[[bin]]
name = "agentdeck"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
dirs = "5"
portable-pty = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# auditui-core lives in the auditui workspace. cargo fetches the repo and
# resolves `auditui-core` to the `core/` workspace member automatically.
auditui-core = { git = "https://github.com/rollysys/auditui", branch = "main" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
